@@ -1,5 +1,10 @@
 2013-05-06  Jesse  <>
 
+	* champions.xml:
+	* ChampionsInfo.cs: 
+
+2013-05-06  Jesse  <>
+
 	* champions.xml: 
 
 2013-05-03  Jesse  <>
